# qt-instrument-cluster

./: .gitignore  CMakeLists.txt  InstrumentCluster-Qt.pro  Rotator.h  Vehicle.cpp  Vehicle.h  main.cpp  notes
new-instrument-cluster/: CMakeLists.txt  main.cpp
new-instrument-cluster/qml/: BottomBar.qml  MainView.qml  main.qml
new-instrument-cluster/qml/Components/: Gauge.qml  GaugeWidget.qml  Stat.qml  StatProgressBar.qml  WidgetLoader.qml
new-instrument-cluster/qml/Styles/: Theme.qml
new-instrument-cluster/qml/Utils/: FilledItem.qml  Rectanglec.qml
new-instrument-cluster/qml/Widgets/: TripComputer.qml
old-instrument-cluster/: ASCM.h  InstrumentCluster-Qt.pro  Rotator.h  main.cpp
old-instrument-cluster/qml/: Coolant.qml  Speedometer.qml  SpeedometerNew.qml  TachometerNew.qml
old-instrument-cluster/qml/imports/InstrumentCluster/: qmldir
qml/: App.qml  BottomBar.qml  CMakeLists.txt  Fuel.qml  Gauge.qml  Layout.qml  MainView.qml  Middle.qml  Rotator.qml  SmallGauge.qml  Speedometer.qml  Tachometer.qml  main.qml
qml/Components/: Gauge.qml  GaugeWidget.qml  Map.qml  Needle.qml  Rotator.qml  WidgetLoader.qml
qml/Utils/: RoundedShape.qml  Triangle.qml
qml/Widgets/: BigMeter.qml
qml/imports/: CMakeLists.txt
qml/imports/InstrumentCluster/: CMakeLists.txt  Constants.qml
qml/imports/InstrumentCluster/designer/: plugin.metainfo
